[BUGFIX] Slightly reduces top margin of page content container to better align with flash messages

--- a/app/assets/stylesheets/partials/_components.scss
+++ b/app/assets/stylesheets/partials/_components.scss
@@ -60,7 +60,7 @@ body.bg-dark {
   max-width: $containerWidth;
   margin-right: auto;
   margin-left: auto;
-  margin-top: $headerHeight *  .85;
+  margin-top: 49px;
 }
 
 
